Corrected #spreadsheet columns overflowing outside of parent

--- a/static/css/spreadsheet.css
+++ b/static/css/spreadsheet.css
@@ -1,6 +1,9 @@
 #spreadsheet, #parameter {
-    width: 100%;
-    height: 100%;
+    position: absolute;
+    top: 50px;
+    bottom: 10px;
+    left: 0;
+    right: 0;
     margin:0;
     display: flex;
     flex-direction: column;
@@ -87,7 +90,7 @@ td input[type="text"], textarea {
 .inner-element{
   position: relative;
   max-height: 100%;
-  width:100%;
+  width: auto;
   margin-right: 0px;
   margin-left: auto;
   text-align: center;
@@ -96,10 +99,12 @@ td input[type="text"], textarea {
   border-radius: 0px;
   background-color: #EEF9FD;
   display: inline-block;
+
 }
 
 .context{
     min-width: 4%;
+    max-height: 100%;
     padding: 10px;
     overflow-wrap: normal;
     overflow-y: auto;
@@ -113,16 +118,21 @@ td input[type="text"], textarea {
 
 #eventTableSelector{
    min-width: 100px;
+   height:auto;
    width: 10%;
+   overflow: auto;
+   display:flex;
+   flex-direction: column;
 }
 
 #sort-container{
-    min-width: 30%;
+    width: 40%;
     margin-left: 0px;
     border: 1px none black;
     margin-right: 0px;
-    resize: horizontal;
     overflow: auto;
+    display: flex;
+    flex-direction:column;
 }
 
 #event-list{
@@ -150,7 +160,7 @@ td input[type="text"], textarea {
 }
 
 #sort-boxes{
-    max-height: 94%;
+    max-height: 50%;
     overflow: auto;
 }
 
@@ -271,13 +281,13 @@ span br{
     display: flex;
     flex-direction: column;
     margin-top: 10px;
-    max-height: 80%;
+    max-height: 90%;
 }
 
 
 .tabs-bar .tab {
   width: 100%;
-  min-height: 35px;
+  min-height: 20px;
   margin-right: 0px;
   margin-top: 0px;
   margin-bottom: 5px;
@@ -355,6 +365,8 @@ ul{
     display:flex;
     flex-direction: row;
     text-align: center;
+    height: 100%;
+    padding: 5px;
 }
 
 .groupBox{
@@ -385,7 +397,7 @@ ul{
 }
 
 .table-box{
-    min-width: 50%;
+    width: 50%;
     position: relative;
     height: 90%;
     margin-top: 0px;
@@ -514,6 +526,7 @@ tr{
 }
 #paramSet{
     overflow: auto;
+    min-width: 50%;
 }
 #paramRepo{
     width: 40%;
