--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,12 +4,27 @@
     -ms-user-select: none;
     user-select: none;
 }
+#main-tabs {
+    position: absolute;
+    display:flex;
+    flex-direction: column;
+    top: 50px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+.tabs{
+    height: auto;
+    width: auto;
+}
 #json-options {
     font-family: ubuntu;
 }
 hr.main {
     border-top: 3px double black;
 }
+
 #loader-img {
     position: absolute;
     left: 40%;
